[gd_scene load_steps=12 format=3 uid="uid://xfl6vvde0403"]

[ext_resource type="Script" uid="uid://bsn7bjdsqp247" path="res://toilet.gd" id="1_epypp"]
[ext_resource type="Script" uid="uid://by4nk5ok7h2r6" path="res://customer.gd" id="1_wtcfe"]
[ext_resource type="Texture2D" uid="uid://ba8dxyx2vm235" path="res://icon.svg" id="2_0e48y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0e48y"]
size = Vector2(102, 127)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_epypp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epypp"]
bg_color = Color(0.7877592, 0.78775924, 0.787759, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hol4"]
bg_color = Color(0.53287417, 0.8976458, 0.38528427, 1)

[sub_resource type="SystemFont" id="SystemFont_q6r6c"]

[sub_resource type="Theme" id="Theme_kdubu"]
default_font = SubResource("SystemFont_q6r6c")
ProgressBar/styles/background = SubResource("StyleBoxFlat_epypp")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_0hol4")

[sub_resource type="GDScript" id="GDScript_epypp"]
script/source = "extends ProgressBar

"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtcfe"]
size = Vector2(81, 229)

[node name="Room" type="Node2D"]

[node name="Toilet" type="Node2D" parent="."]
position = Vector2(225, 343)
script = ExtResource("1_epypp")

[node name="Area2D" type="Area2D" parent="Toilet"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Toilet/Area2D"]
shape = SubResource("RectangleShape2D_0e48y")

[node name="Sprite2D" type="Sprite2D" parent="Toilet"]
scale = Vector2(84.00001, 103.50001)
texture = SubResource("PlaceholderTexture2D_epypp")

[node name="Customer" type="AnimatableBody2D" parent="."]
position = Vector2(479, 336)
input_pickable = true
script = ExtResource("1_wtcfe")

[node name="Sprite2D" type="Sprite2D" parent="Customer"]
scale = Vector2(0.57031274, 1.6953127)
texture = ExtResource("2_0e48y")

[node name="ProgressBar" type="ProgressBar" parent="Customer/Sprite2D"]
anchors_preset = -1
anchor_left = -0.041844845
anchor_right = 1.0418448
anchor_bottom = 0.1796875
offset_left = -64.0
offset_top = -64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
theme = SubResource("Theme_kdubu")
script = SubResource("GDScript_epypp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Customer"]
shape = SubResource("RectangleShape2D_wtcfe")

[node name="Timer" type="Timer" parent="Customer"]
wait_time = 10.0

[connection signal="body_entered" from="Toilet/Area2D" to="Customer" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Toilet/Area2D" to="Customer" method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Customer" to="Customer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Customer" to="Customer" method="_on_mouse_exited"]
[connection signal="timeout" from="Customer/Timer" to="Customer" method="_on_timer_timeout"]
